Add clipboard landing page

--- a/index.html
+++ b/index.html
@@ -20,5 +20,192 @@
         ></script>
         <title>Clipboard Landing Page</title>
     </head>
-    <body></body>
+    <body>
+        <header class="header">
+            <div class="container">
+                <img src="/images/logo.svg" alt="Clipboard logo" class="logo" />
+                <div class="hero">
+                    <h1 class="hero__title">
+                        A history of everything you copy
+                    </h1>
+                    <p class="hero__subtitle">
+                        Clipboard allows you to track and organize everything
+                        you copy. Instanly access your clipboard on all your
+                        devices.
+                    </p>
+                    <div class="hero__cta">
+                        <button class="button">Download for iOS</button
+                        ><button class="button">Download for Mac</button>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <section class="section container">
+                <h2 class="section__title">Keep track of your snippets</h2>
+                <p class="section__subtitle">
+                    Clipboard instantly sotres any item you copy in the cloud,
+                    meaning you can access your snippets immediately on all your
+                    devices. Our Mac and iOS apps will help you ornganize
+                    everything.
+                </p>
+                <div class="feature grid">
+                    <img
+                        src="/images/image-computer.png"
+                        alt="image Mac"
+                        class="feature__img"
+                    />
+                    <div class="feature__content">
+                        <div class="wrapper">
+                            <h3 class="feature__title">Quick Search</h3>
+                            <p class="feature__subtitle">
+                                Easily search your snippets by content,
+                                category, web address, application, and more.
+                            </p>
+                        </div>
+                        <div class="wrapper">
+                            <h3 class="feature__title">iCloud Sync</h3>
+                            <p class="feature__subtitle">
+                                Instantly saves and syncs snippets across all
+                                your devices.
+                            </p>
+                        </div>
+                        <div class="wrapper">
+                            <h3 class="feature__title">Complete History</h3>
+                            <p class="feature__subtitle">
+                                Retrieve any snippets from the first moment you
+                                started using the app.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section container">
+                <h2 class="section__title">Access Clipboard anywhere</h2>
+                <p class="section__subtitle">
+                    Whether you're on the go, or at your computer, you can
+                    access all you Clipboard snippets in a few simple clicks.
+                </p>
+                <img
+                    src="/images/image-devices.png"
+                    alt="image smartphone and tablet"
+                    class="section__img"
+                />
+            </section>
+            <section class="section container">
+                <h2 class="section__title">Supercharge your workflow</h2>
+                <p class="section__subtitle">
+                    We've got the tools to boost your productivity.
+                </p>
+                <div class="feature__content">
+                    <div class="wrapper">
+                        <img
+                            src="/images/icon-blacklist.svg"
+                            alt="blacklist icon"
+                            class="feature__content-img"
+                        />
+                        <h3 class="feature__title">Create blacklists</h3>
+                        <p class="feature__subtitle">
+                            Ensure sensitive information never makes its way to
+                            your clipboard by excluding certain sources.
+                        </p>
+                    </div>
+                    <div class="wrapper">
+                        <img
+                            src="/images/icon-text.svg"
+                            alt="text icon"
+                            class="feature__content-img"
+                        />
+                        <h3 class="feature__title">Plain text snippets</h3>
+                        <p class="feature__subtitle">
+                            Remove unwanted formatting from copied text for a
+                            consistent look.
+                        </p>
+                    </div>
+                    <div class="wrapper">
+                        <img
+                            src="/images/icon-preview.svg"
+                            alt="preview icon"
+                            class="feature__content-img"
+                        />
+                        <h3 class="feature__title">Sneak preview</h3>
+                        <p class="feature__subtitle">
+                            Quick preview of all snippets on your Clipboard for
+                            easy access.
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial grid">
+                    <img
+                        src="/images/logo-google.png"
+                        alt="google logo"
+                        class="testimonial__img"
+                    /><img
+                        src="/images/logo-ibm.png"
+                        alt="ibm logo"
+                        class="testimonial__img"
+                    /><img
+                        src="/images/logo-microsoft.png"
+                        alt="microsoft logo"
+                        class="testimonial__img"
+                    /><img
+                        src="/images/logo-hp.png"
+                        alt="hp logo"
+                        class="testimonial__img"
+                    /><img
+                        src="/images/logo-vector-graphics.png"
+                        alt="vector graphics logo"
+                        class="testimonial__img"
+                    />
+                </div>
+            </section>
+            <section class="section container">
+                <h2 class="section__title">Clipboard for iOS and Mac OS</h2>
+                <p class="section__subtitle">
+                    Available for free on the App Store. Download for Mac or
+                    iOS, sync with iCloud and you're ready to start adding to
+                    your clipboard.
+                </p>
+                <div class="hero__cta">
+                    <button class="button">Download for iOS</button
+                    ><button class="button">Download for Mac</button>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <img
+                    src="/images/logo.svg"
+                    alt="clipboard logo"
+                    class="footer__logo"
+                />
+                <div class="footer__menu">
+                    <ul class="menu__list">
+                        <li><a href="#" class="list__item">FAQs</a></li>
+                        <li><a href="#" class="list__item">Contact Us</a></li>
+                    </ul>
+                    <ul class="menu__list">
+                        <li>
+                            <a href="#" class="list__item">Privacy Policy</a>
+                        </li>
+                        <li><a href="#" class="list__item">Press Kit</a></li>
+                    </ul>
+                    <ul class="menu__list">
+                        <li>
+                            <a href="#" class="list__item">Install Guide</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__sm">
+                    <a href="#" class="sm__icon"
+                        ><i class="fa-brands fa-square-facebook"></i></a
+                    ><a href="#" class="sm__icon"
+                        ><i class="fa-brands fa-twitter"></i></a
+                    ><a href="#" class="sm__icon"
+                        ><i class="fa-brands fa-instagram"></i
+                    ></a>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
