Add style to header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <body>
         <header class="header">
             <div class="container">
-                <img src="/images/logo.svg" alt="Clipboard logo" class="logo" />
+                <img
+                    src="/images/logo.svg"
+                    alt="Clipboard logo"
+                    class="header__logo"
+                />
                 <div class="hero">
                     <h1 class="hero__title">
                         A history of everything you copy
@@ -33,7 +37,7 @@
                         you copy. Instanly access your clipboard on all your
                         devices.
                     </p>
-                    <div class="hero__cta">
+                    <div class="cta flex">
                         <button class="button">Download for iOS</button
                         ><button class="button">Download for Mac</button>
                     </div>
