Add style to main section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         alt="image Mac"
                         class="feature__img"
                     />
-                    <div class="feature__content">
+                    <div class="feature__content flex">
                         <div class="wrapper">
                             <h3 class="feature__title">Quick Search</h3>
                             <p class="feature__subtitle">
@@ -106,7 +106,7 @@
                         <img
                             src="/images/icon-blacklist.svg"
                             alt="blacklist icon"
-                            class="feature__content-img"
+                            class="feature__icon"
                         />
                         <h3 class="feature__title">Create blacklists</h3>
                         <p class="feature__subtitle">
@@ -118,7 +118,7 @@
                         <img
                             src="/images/icon-text.svg"
                             alt="text icon"
-                            class="feature__content-img"
+                            class="feature__icon"
                         />
                         <h3 class="feature__title">Plain text snippets</h3>
                         <p class="feature__subtitle">
@@ -130,7 +130,7 @@
                         <img
                             src="/images/icon-preview.svg"
                             alt="preview icon"
-                            class="feature__content-img"
+                            class="feature__icon"
                         />
                         <h3 class="feature__title">Sneak preview</h3>
                         <p class="feature__subtitle">
@@ -170,7 +170,7 @@
                     iOS, sync with iCloud and you're ready to start adding to
                     your clipboard.
                 </p>
-                <div class="hero__cta">
+                <div class="cta flex">
                     <button class="button">Download for iOS</button
                     ><button class="button">Download for Mac</button>
                 </div>
