Add style to footer

--- a/index.html
+++ b/index.html
@@ -177,30 +177,30 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container">
+            <div class="content container grid">
                 <img
                     src="/images/logo.svg"
                     alt="clipboard logo"
                     class="footer__logo"
                 />
-                <div class="footer__menu">
-                    <ul class="menu__list">
+                <div class="footer__menu grid">
+                    <ul class="menu__list grid">
                         <li><a href="#" class="list__item">FAQs</a></li>
                         <li><a href="#" class="list__item">Contact Us</a></li>
                     </ul>
-                    <ul class="menu__list">
+                    <ul class="menu__list grid">
                         <li>
                             <a href="#" class="list__item">Privacy Policy</a>
                         </li>
                         <li><a href="#" class="list__item">Press Kit</a></li>
                     </ul>
-                    <ul class="menu__list">
+                    <ul class="menu__list grid">
                         <li>
                             <a href="#" class="list__item">Install Guide</a>
                         </li>
                     </ul>
                 </div>
-                <div class="footer__sm">
+                <div class="footer__sm flex">
                     <a href="#" class="sm__icon"
                         ><i class="fa-brands fa-square-facebook"></i></a
                     ><a href="#" class="sm__icon"
