Add desktop version

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p class="section__subtitle">
                     We've got the tools to boost your productivity.
                 </p>
-                <div class="feature__content">
+                <div class="feature__content grid">
                     <div class="wrapper">
                         <img
                             src="/images/icon-blacklist.svg"
@@ -177,13 +177,13 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="content container grid">
+            <div class="content container flex">
                 <img
                     src="/images/logo.svg"
                     alt="clipboard logo"
                     class="footer__logo"
                 />
-                <div class="footer__menu grid">
+                <div class="footer__menu flex">
                     <ul class="menu__list grid">
                         <li><a href="#" class="list__item">FAQs</a></li>
                         <li><a href="#" class="list__item">Contact Us</a></li>
